Fix nav link spacing

--- a/apps/root/styles/global/header.scss
+++ b/apps/root/styles/global/header.scss
@@ -80,7 +80,7 @@ nav {
     a {
       position: relative;
 
-      padding-right: var(--spacing-sm);
+      padding: var(--spacing-xs) var(--spacing-sm);
 
       font-family: var(--font-heading);
       font-size: 2rem;
@@ -111,7 +111,7 @@ nav {
   // All Nav items
   a {
     display: inline-block;
-    padding: var(--spacing-xs) 0 var(--spacing-xs) var(--spacing-sm);
+    padding-left: var(--spacing-sm);
     width: 100%;
 
     @media (--large) {
